--- a/docs_builder/pydocmd.yml
+++ b/docs_builder/pydocmd.yml
@@ -1,13 +1,13 @@
 site_name: WSI sampler
 
 generate:
-- slide_sampler.md:
-  - modules.slide_sampler++
+- slide_sampler.md: modules.slide_sampler++
 
 pages:
 - Home: index.md << ../README.md
-- Documentation:
-  - Slide sampler: slide_sampler.md
+- modules:
+  - slide_sampler: slide_sampler.md
+
 
 additional_search_paths:
 - ..
