--- a/docs_builder/pydocmd.yml
+++ b/docs_builder/pydocmd.yml
@@ -2,11 +2,13 @@ site_name: Whole-Slide-Image (WSI) sampler
 
 generate:
 - slide_sampler.md: modules.slide_sampler++
+- utils.md: modules.utils++
 
 pages:
 - Home: index.md << ../README.md
 - modules:
   - slide_sampler: slide_sampler.md
+  - utils: utils.md
 
 
 additional_search_paths:
