updated gitignore and added ims

--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,10 @@
-
-\.idea/
-
-modules/__pycache__/
-
-*.pickle
-
-\.ipynb_checkpoints/
-
-Untitled\.ipynb
-
-cat\.JPG
-
-old/tests/bg_vis/Tumor_108_background\.png
-
-*.npy
-
+# Compiled/cached Python
 __pycache__/
+*.py[cod]
+*$py.class
 
-patches/
-
-\.DS_Store
-
-\.pytest_cache/v/cache/
-
-dist/
-
-wsisampler\.egg-info/
-
-*.jp2
-
-*.tif
-
-./test_data/
-
-*.svs
-
-*.png
-
-*.xml
+# Temporaries
+.ipynb_checkpoints/
+*.swp
+.idea
+*.DS_Store
